--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,8 @@
 		<h1><a href="/">Blog Cineclube Oficine-se</a></h1>
 	
 	</div>
+
+	<div>
     
     	{% for post in posts %}
     		<div>
@@ -16,6 +18,8 @@
         		<p>{{ post.text|linebreaksbr }}</p>
     		</div>
 		{% endfor %}
+	
+	</div>
 
     <div>
     
