--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,8 +13,8 @@
     
     	{% for post in posts %}
     		<div>
-        		<p>published: {{ post.published_date }}</p>
-        		<h2><a href="">{{ post.title }}</a></h2>
+        		<p></p>
+        		<h2><a href="">{{ post.title }}</a>published: {{ post.published_date }}</h2>
         		<p>{{ post.text|linebreaksbr }}</p>
     		</div>
 		{% endfor %}
